<resources>
    <string name="app_name">E-learning Man 5</string>
    <string name="api_server">http://adiwebelearning.my.id/api</string>
    <!--
 http://adiwebelearning.my.id
 http://192.168.101.95:8000
-->
    <string name="title_activity_user">UserActivity</string>
    <string name="title_home">Tugas Kelas</string>
    <string name="title_dashboard">Profile Siswa</string>
    <string name="title_notifications">Notifications</string>

    <string name="kelas">KELAS</string>
    <string name="mata_pelajaran">MATA PELAJARAN</string>
    <string name="nama_guru">NAMA GURU</string>
    <string name="download_materi">Download Materi</string>
    <string name="tugas">Lihat Tugas</string>
    <string name="deskripsi_materi">Deskripsi Materi</string>
    <string name="materi">Materi</string>

    <string name="tanggal_dan_waktu">tanggal dan waktu</string>
    <string name="logout">LOGOUT</string>
    <string name="lorem_deskripsi">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</string>
    <string name="lampiran_tugas">Lampiran Tugas</string>
    <string name="tugas_anda">Tugas Anda</string>
    <string name="sisa_waktu">Sisa waktu: habis</string>
    <string name="forum_diskusi">Forum Diskusi</string>

    <string name="nama_siswa">Nama Siswa</string>
    <string name="email_siswa">Email Siswa</string>
    <string name="hp_siswa">Hp Siswa</string>
    <string name="address">address</string>
    <string name="kelas_siswa">Kelas Siswa</string>
    <string name="jurusan_siswa">Jurusan Siswa</string>

    <string name="password">Password</string>
    <string name="back">back</string>
    <string name="imageman5">imageMan5</string>
    <string name="update_profile">Update Profile</string>
</resources>