<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.tugas.TugasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/judulTugas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginVertical="12dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/deskripsiTugas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_deskripsi"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/lampiran_tugas"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/recCardFileTugas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/fileIcon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/baseline_insert_drive_file_24"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignEnd="@+id/fileIcon"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/baseline_file_download_24" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/tugas_anda"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/waktuSisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sisa_waktu"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/idLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/waktuSisa"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/pdfFileIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground" >
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/pdf" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload Tugas" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="Update Tugas" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>