<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/recImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ipa"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#AEE3F2FD"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp">

            <TextView
                android:id="@+id/recKelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/kelas"
                android:textColor="@color/lavender"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/recMapel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/mata_pelajaran"
                android:textColor="@color/lavender"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/recGuru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/nama_guru"
                android:textColor="@color/lavender"
                android:textSize="11sp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>