<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/architecture1"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="#AEE3F2FD"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recMateri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/materi"
                android:textColor="@color/goodgrey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/recDesMateri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/deskripsi_materi"
                android:textColor="@color/goodgrey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/recCreat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/tanggal_dan_waktu"
                android:textColor="@color/goodgrey"
                android:textSize="9.5sp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/recCardDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif"
                            android:text="@string/download_materi"
                            android:textColor="@color/lavender"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                        <ImageView
                            android:layout_marginVertical="3dp"
                            android:layout_marginEnd="5dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/baseline_file_download_24" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/recCardTugas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif"
                            android:text="@string/tugas"
                            android:textColor="@color/lavender"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                        <ImageView
                            android:layout_marginVertical="3dp"
                            android:layout_marginEnd="5dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/baseline_file_open_24" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/recCardChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif"
                            android:text="@string/forum_diskusi"
                            android:textColor="@color/lavender"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                        <ImageView
                            android:layout_marginVertical="3dp"
                            android:layout_marginEnd="5dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/baseline_forum_24" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>