<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.editprofile.EditProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/lavender_border">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="100dp"
                app:cardElevation="4dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/recProfile"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/namaContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                app:helperTextTextColor="#CC0000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_reg"
                    android:hint="@string/nama_siswa"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:maxLength="35"
                    android:lines="1"
                    android:textColor="@color/lavender"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/noHpContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:helperTextTextColor="#CC0000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNoHP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_reg"
                    android:hint="@string/hp_siswa"
                    android:inputType="number"
                    android:maxLength="14"
                    android:lines="1"
                    android:textColor="@color/lavender"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alamatContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                app:helperTextTextColor="#CC0000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_reg"
                    android:hint="@string/address"
                    android:maxLines="5"
                    android:textColor="@color/lavender"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnKembali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="back" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="update profile" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>